# va_c_arena

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh
.devcontainer/: devcontainer.json
include/: va_arena.h
src/: example.c  example_aligned.c
tests/: test_va_arena.c
